ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simplecontainer
  namespace: simplecontainer
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "simplecontainer.ubk3s"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simplecontainer
            port:
              number: 80
